--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ python-dotenv==1.1.1
 requests==2.32.4
 urllib3==2.5.0
 Werkzeug==3.1.3
+
+WTForms~=3.2.1
+Flask-Login~=0.6.3
+Flask-Migrate~=4.1.0
+alembic~=1.16.4
+SQLAlchemy~=2.0.42
