--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,86 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+alembic==1.16.4
+annotated-types==0.7.0
+anyio==4.10.0
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
 blinker==1.9.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+decorator==5.2.1
+defusedxml==0.7.1
+dnspython==2.7.0
+docopt==0.6.2
+email_validator==2.2.0
+executing==2.2.0
+fastapi==0.116.1
+fastjsonschema==2.21.1
 Flask==3.1.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+frozenlist==1.7.0
+greenlet==3.2.3
 idna==3.10
+ipython==8.12.3
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+Mako==1.3.10
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.3
+multidict==6.6.3
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.4
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+propcache==0.3.2
+pure_eval==0.2.3
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pywin32==311
+pyzmq==27.0.1
+referencing==0.36.2
 requests==2.32.4
+rpds-py==0.27.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.42
+stack-data==0.6.3
+starlette==0.47.2
+tinycss2==1.4.0
+tornado==6.5.1
+traitlets==5.14.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 urllib3==2.5.0
+wcwidth==0.2.13
+webencodings==0.5.1
 Werkzeug==3.1.3
-
-WTForms~=3.2.1
-Flask-Login~=0.6.3
-Flask-Migrate~=4.1.0
-alembic~=1.16.4
-SQLAlchemy~=2.0.42
-aiohttp~=3.12.15
-fastapi~=0.116.1
+WTForms==3.2.1
+yarg==0.1.9
+yarl==1.20.1
